_docs/kustomize/virtengine-node/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtengine-node
spec:
  selector:
    matchLabels:
      virtengine.network/component: virtengine-node
      app: virtengine-node
  template:
    metadata:
      labels:
        virtengine.network/component: virtengine-node
        app: virtengine-node
    spec:
      containers:
        - name: virtengine-node
          image: ghcr.io/virtengine/virtengine:stable
          imagePullPolicy: IfNotPresent
          command: [ "/bin/sh" , "/boot/run.sh" ]
          ports:
            - name: virtengine-rpc
              containerPort: 26657
            - name: virtengine-p2p
              containerPort: 26656
          volumeMounts:
            - name: boot
              mountPath: /boot
              readOnly: true
            - name: data
              mountPath: /boot-data
              readOnly: true
            - name: keys
              mountPath: /boot-keys
              readOnly: true
      volumes:
        - name: boot
          configMap:
            name: virtengine-boot
        - name: data
          configMap:
            name: virtengine-data
        - name: keys
          secret:
            secretName: virtengine-keys
