_docs/kustomize/virtengine-node/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtengine-node
spec:
  rules:
    - host: virtengine.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: virtengine-node
                port:
                  name: virtengine-rpc
